[package]
name = "mini-iguana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }